Fix overview layout issue

--- a/frontend/comp022-group4/src/styles/App.css
+++ b/frontend/comp022-group4/src/styles/App.css
@@ -3,5 +3,6 @@
 }
 
 .app {
+  color: white;
   background-color: #111;
 }
