--- a/frontend/comp022-group4/src/styles/Overview.css
+++ b/frontend/comp022-group4/src/styles/Overview.css
@@ -1,37 +1,3 @@
-.overview {
-  display: flex;
-  color: white;
-  justify-content: space-between;
-  padding: 8vw;
-}
-
-.overview_poster {
-  object-fit: contain;
-  max-height: 600px;
-  border-radius: 5px;
-  margin-right: 4vw;
-  transition: transform 450ms;
-}
-
-.overview_movie {
-  display: flex;
-  flex-direction: column;
-  height: 100vh;
-  max-height: 600px;
-}
-
-.overview_title {
-  text-transform: uppercase;
-  font-size: 4rem;
-  margin-bottom: 12px;
-}
-
-.overview_details {
-  margin-left: 16px;
-  background-color: rgb(54, 30, 30);
-  flex-grow: 1;
-}
-
 .genres {
   display: flex;
   height: 40px;
@@ -59,6 +25,8 @@
 }
 
 h2 {
+  font-weight: 700;
+  font-size: 1.2rem;
   margin-bottom: 12px;
 }
 
@@ -68,8 +36,6 @@ h3 {
 }
 
 .overview_box {
-  display: flex;
-  align-self: flex-end;
   margin-top: auto;
   bottom: 0;
 }
